syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/location.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "DeviceGrpcService.Proto";

package device;


service Device {
  // ------------- Basic CRUD functionality ----------------------------------------------
  // Create
  rpc CreateDevice (DeviceCreateRequest) returns (DeviceGrpcBaseModel);
  // Read
  rpc GetAllDevices (GetAllDevicesRequest) returns (stream DeviceGrpcBaseModel);
  rpc GetAllDevicesNested (GetAllDevicesRequest) returns (stream DeviceGrpcNestedModel);

  rpc GetDeviceById (DeviceByIdRequest) returns (DeviceGrpcBaseModel);
  rpc GetDeviceByIdNested (DeviceByIdRequest) returns (DeviceGrpcNestedModel);
  // Update
  rpc UpdateDeviceByID (DeviceUpdateRequest) returns (DeviceGrpcBaseModel);
  // Delete
  rpc DeleteDeviceByID (DeviceByIdRequest) returns (google.protobuf.Empty);
  // -------------------------------------- ----------------------------------------------
}

message GetAllDevicesRequest {
  string OwnerId = 1;
}

message DeviceCreateRequest {
  google.protobuf.StringValue Name = 1;
  bool Online = 2;
  google.protobuf.Int32Value LocationId = 3;
  string OwnerId = 4;
}

message DeviceUpdateRequest {
  string ID = 1;
  oneof Name {
    string NameValue = 2;
    bool NameNullified = 3;
  }
  oneof Online {
    bool OnlineValue = 4;
  }
  oneof LocationID {
    int32 LocationIdValue = 5;
    bool LocationNullified = 6;
  };
  string OwnerId = 7;
}

message DeviceByIdRequest {
  string Id = 1;
  string OwnerId = 2;
}

message DeviceGrpcBaseModel {
  string ID = 1;
  string Name = 2;
  bool Online = 3;
  int32 LocationID = 4;
}

message  DeviceGrpcNestedModel {
  string ID = 1;
  string Name = 2;
  bool Online = 3;
  LocationGrpcModel Location = 4;
}

